# Python_Web_HW_13_FastAPI

./: docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 593c7c61f195_create_models.py  805aee56cb3f_avatar.py
src/: schemas.py
src/config/: config.py
src/database/: db.py  models.py
src/repository/: auth.py  contacts.py
src/routes/: auth.py  contacts.py  users.py
src/servises/: email.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py
